fix: add  goods_api banner swagger
